fix(ui): sidebar icon alignment (#28783)

--- a/ui/src/app/sidebar/sidebar.scss
+++ b/ui/src/app/sidebar/sidebar.scss
@@ -111,7 +111,6 @@ $deselected-text: #818d94;
             font-size: 22px;
             margin-left: 2px;
             margin-right: -2px;
-            margin-top: 12px;
             width: 32px;           
         }
 
